--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
+    "chart.js": "^3.7.1",
+    "faker": "5.5.3",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.1",
+    "react-chartjs-2": "^4.0.1",
     "react-dom": "^17.0.2",
     "react-scripts": "^2.1.3",
+    "typescript": "^4.6.3",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://alexanderpron.github.io/menu-app/",
