--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "menu-app",
   "version": "0.1.0",
   "private": true,
+  "main": "index.js",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^5.1.3",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.6.0",
     "faker": "5.5.3",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-bootstrap": "^2.2.1",
-    "react-chartjs-2": "^4.0.1",
-    "react-dom": "^17.0.2",
-    "react-scripts": "^2.1.3",
+    "react-chartjs-2": "^4.0.0",
+    "react-dom": "17.0.2",
+    "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
+    "victory": "^36.3.1",
     "web-vitals": "^2.1.4"
   },
   "homepage": "https://alexanderpron.github.io/menu-app/",
@@ -45,6 +47,11 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.2.3"
+    "@tsconfig/react-native": "^1.0.4",
+    "@types/faker": "^6.6.9",
+    "@types/react": "17.0.38",
+    "@types/react-dom": "17.0.11",
+    "gh-pages": "^3.2.3",
+    "typescript": "4.5.4"
   }
 }
