--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-bootstrap": "^2.2.1",
     "react-chartjs-2": "^4.0.0",
     "react-dom": "17.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.3",
     "victory": "^36.3.1",
